--- a/src/components/feedbackOptions/feedbackOptions.module.css
+++ b/src/components/feedbackOptions/feedbackOptions.module.css
@@ -5,8 +5,9 @@
 }
 
 .button {
-  padding: 6px 12px;
-  font-size: 18px;
+  padding: 13px 32px;
+  font-weight: bold;
+  font-size: 24px;
   text-align: center;
   background-color: white;
   border-radius: 8px;
